--- a/apps/shared/ui/index.html
+++ b/apps/shared/ui/index.html
@@ -1,8 +1,9 @@
 <html><head><title>Shared Variable</title></head>
 <body>
 <h2>Persistent Shared Variable</h2>
-Usually a persistent shared variable is a secret mutable object
-shared by a small number of services. Odds are, a programming
+Usually a persistent shared variable is a mutable object
+shared by a small number of services. It has no methods and
+cannot be manipulated remotely. Odds are, a programming
 bug has exposed such a variable, and you are the recipient.
 
 </body>
