drop/make force checkpoint, testsaver reliable filesize

--- a/apps/hello/ui/index.html
+++ b/apps/hello/ui/index.html
@@ -7,6 +7,6 @@
 <script type="text/javascript" src="/apps/hello/ui/hello.js"></script>
 </head>
 <body>
-<h3 id="greeting">Hello</h3>
+<h3 id="greeting"></h3>
 </body>
 </html>
