flesh out plusMinus example

--- a/apps/plusMinus/ui/makeRoot.html
+++ b/apps/plusMinus/ui/makeRoot.html
@@ -7,6 +7,10 @@
 <script type="text/javascript" src="/apps/plusMinus/ui/root.js"></script>
 </head>
 <body>
-<h3 id="greeting"></h3>
+<h3>Plus/Minus Root</h3>
+Current Count: <span id="count"></span>
+<p>
+<span id="incr"></span><br />
+<span id="decr"></span>
 </body>
 </html>
