flesh out, repair plusMinus example code

--- a/apps/incr/ui/index.html
+++ b/apps/incr/ui/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <h3>Incrementer</h3>
-<input type="button" value="Increment" onclick="increment()" >
+<input type="button" value="Increment" id="incr" >
 </body>
 </html>
