--- a/apps/plusMinus/ui/makeMinus.html
+++ b/apps/plusMinus/ui/makeMinus.html
@@ -1,14 +1,14 @@
 <html>
 <head>
 <meta name="referrer" content="never">
-<title>Incrementer</title>
+<title>Decrementer</title>
 <script type="text/javascript" src="/views/libs/q.js"></script>
 <script type="text/javascript" src="/views/libs/capperConnect.js"></script>
-<script type="text/javascript" src="/apps/plusMinus/ui/incr.js"></script>
+<script type="text/javascript" src="/apps/plusMinus/ui/decr.js"></script>
 </head>
 <body>
-<h3>Plus/Minus Incrementer</h3>
-<input type="button" value="Increment" id="incr" />
+<h3>Plus/Minus Decrementer</h3>
+<input type="button" value="Decrement" id="decr" />
 <p>
 <span id="status"></span>
 </body>
