fixed bug in persistent ref in collection in context.state

--- a/apps/members/ui/makeAdmin.html
+++ b/apps/members/ui/makeAdmin.html
@@ -1,21 +1,14 @@
 <html>
 <head>
 <meta name="referrer" content="never">
-<title>Person</title>
+<title>Membership Admin</title>
 <script type="text/javascript" src="/views/libs/q.js"></script>
 <script type="text/javascript" src="/views/libs/jquery-2.1.1.js"></script>
 <script type="text/javascript" src="/views/libs/capperUtils.js"></script>
 <script type="text/javascript" src="/views/libs/capperConnect.js"></script>
 <script type="text/javascript" src="/apps/members/ui/delegateMgr.js"></script>
-<script type="text/javascript" src="/apps/members/ui/person.js"></script>
+<script type="text/javascript" src="/apps/members/ui/admin.js"></script>
 </head>
 <body>
-<h3 id="title">Person</h3>
-<div id="fields">
-</div>
-<input type="button" value="Update" id="update" />
-<p>
-<span id="status"></span>
-<hr />
 </body>
 </html>
